SERVER-97911 Query with "_id in empty array" traverses the full colle… (#30751)

GitOrigin-RevId: 9d2aa16628033384b334510e0368fbadb2079f36